--- a/composer.json
+++ b/composer.json
@@ -24,9 +24,9 @@
     },
 
     "require": {
-        "illuminate/support": "^8.5.*"
+        "illuminate/support": "8.*"
     },
     "require-dev": {
-        "illuminate/http": "^8.5.*"
+        "illuminate/http": "8.*"
     }
 }
